src/main/webapp/sass/Portal.scss
/* ... */
/* End Svarog css. */

.dropzone {
	box-sizing: border-box;
	display: none;
	position: fixed;
	width: 100%;
	height: 100%;
	left: 0;
	top: 0;
	z-index: 99999;
	background-color: rgba(0,0,0,0.8);
	border: 5px dashed #F9F9F9;
}

.uploadContainer {
	box-sizing: border-box;
	padding: 10px 15px;
	border: 1px dashed grey;
	border-radius: 4px;
}
.blur {
	-webkit-filter: blur(4px);
	filter: blur(4px);
}

#rootPanel summary { color:$synapse-blue; }
#rootPanel summary:hover { text-decoration: underline; cursor:pointer; }

#headerPanel {
	.searchTextField {
		width: 0px;
		opacity: 0;
	}
	.searchTextField-active {
		width: 200px;
		transition: width 0.4s ease-in-out;
		opacity: 1;
	}
	.userProfileImage {
		border-radius: 50%;
		background: white;
	}
	.dropdown ul.dropdown-menu.hover {
		display: block;
	}
	.dropdown ul.dropdown-menu {
		border-radius: 0px;
		margin-top: 0px;
	}
	a.menu:after, .dropdown-toggle:after {
		content: none;
	}
	.dropdown:hover {background-color: $synapse-green}
	.dropdown {background-color: none;}
	.alert {
		border-radius: 0px;
	}
}
#footerPanel {
	.alert {
		border-radius: 0px;
	}
}
.lato {
	font-family: Lato;
}
.letter-spacing-6 {
	letter-spacing: 6px;
}

